<resources>
    <string name="app_name">Teams</string>
    <string name="show_a_list_of_teams">show a list of teams</string>
    <string name="show_the_map_page">show the map page</string>
    <string name="show_the_settings_page">show the settings page</string>
    <string name="team_image">Team image</string>
    <string name="is_favorite">Is Favorite</string>
    <string name="rate">rate</string>
    <string name="rating">rating</string>
    <string name="cell_phone">cell_phone</string>
    <string name="enter_city">enter_city</string>
    <string name="city">city</string>
    <string name="enter_name">enter_name</string>
    <string name="name">name</string>
    <string name="save">save</string>
    <string name="off">OFF</string>
    <string name="save_rating">Save Rating</string>
    <string name="delete">Delete</string>
    <string name="_100">100%</string>
    <string name="newText">New</string>
    <string name="teams_list">Teams List</string>
    <string name="team_settings">Team Settings</string>
    <string name="team_edit">Team Edit</string>
    <string name="team_map">Team Map</string>
    <string name="descending">descending</string>
    <string name="ascending">ascending</string>
    <string name="sort_order">Sort order</string>
    <string name="sort_by">Sort by</string>

    <string name="API_URl">https://fvtcdp.azurewebsites.net/api/Team/</string>
    <string name="normal">normal</string>
    <string name="satellite">satellite</string>
    <string name="wnw">wnw</string>
    <string name="address">Address:</string>
    <string name="_625_weatherstone_dr">625 Weatherstone Dr.</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="oshkosh">Oshkosh</string>
    <string name="wi">WI</string>
    <string name="state">State</string>
    <string name="_54901">54901</string>
    <string name="zipcode">Zipcode</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="none">None</string>
</resources>