<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border_line">

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:layout_marginEnd="@dimen/_5dp"
        app:layout_constraintEnd_toStartOf="@+id/imgPhoto"
        app:layout_constraintTop_toTopOf="@id/imgPhoto"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginStart="@dimen/_16dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_16dp"
        />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/purple"
        android:textSize="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:layout_marginTop="@dimen/_16dp"
        />

    <CheckBox
        android:id="@+id/chkFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgPhoto"
        android:layout_marginEnd="@dimen/_8dp"
        android:text="@string/is_favorite" />

    <ImageButton
        android:id="@+id/imgPhoto"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:layout_margin="@dimen/_8dp"
        android:contentDescription="@string/team_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/packers" />
</androidx.constraintlayout.widget.ConstraintLayout>